Update1 index.html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         });
     };
     generatememebtn.addEventListener("click",generatememe);
+        generatememe();
     </script>
 </body>
 </html>
